--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js" ></script>
+    <script defer src="opdracht-1.js" ></script>
+    <script defer src="opdracht-2.js" ></script>
+    <script defer src="opdracht-3.js" ></script>
 </head>
 <body>
-
+<p class="sold"   id="tvSold"></p>
+<p class="bought" id="tvBought"></p>
+<p class="sell" id="toSell"></p>
+<ul id="myList"></ul>
 </body>
 </html>
